--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,13 +1,13 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 'android-L'
+    compileSdkVersion 14
     buildToolsVersion "20.0.0"
 
     defaultConfig {
         applicationId "com.example.crusader.ejemplo001"
-        minSdkVersion 14
-        targetSdkVersion 'L'
+        minSdkVersion 16
+        targetSdkVersion 14
         versionCode 1
         versionName "1.0"
     }
